# rapids-metadata

./: .gitignore  .pre-commit-config.yaml  README.md  dependencies.yaml  pyproject.toml  rapids-metadata.json
.github/workflows/: checks-and-builds.yaml  lint.yaml  run-tests.yaml
ci/: build-test.sh  build_python.sh  build_wheel.sh  generate_json.py  generate_json.sh  generate_json_schema.py  lint.sh  validate_wheel.sh
conda/recipes/rapids-metadata/: meta.yaml
schemas/: rapids-metadata-v1.json
src/rapids_metadata/: __init__.py  http.py  json.py  metadata.py  rapids_version.py  remote.py
tests/: test_http.py  test_json.py  test_metadata.py  test_rapids_version.py  test_remote.py
tests/metadata/: test_json.py  test_metadata.py  test_version.py
