# Copyright (c) 2024, NVIDIA CORPORATION.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "rapids-metadata"
version = "0.1.0.dev0"
authors = [
    { name = "RAPIDS Development Team", email = "pypi@rapids.ai" }
]
urls = { homepage = "https://github.com/rapidsai/rapids-metadata" }
description = "metadata for structure of RAPIDS projects"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"

[project.scripts]
rapids-metadata-json = "rapids_metadata.json:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = { "find" = { where = ["src"] } }

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
